CONTENT/platform/ingress_service.yaml
apiVersion: v1
kind: Service
metadata:
 name: ibacc-cpe-ingress-svc
spec:
 ports:
   - name: http
     protocol: TCP
     port: 9080
     targetPort: 9080
   - name: https
     protocol: TCP
     port: 9443
     targetPort: 9443
 selector:
   app: ibm-dba-contentservices
 type: ClusterIP
---

apiVersion: v1
kind: Service
metadata:
 name: ibacc-ext-ingress-svc
spec:
 ports:
   - name: http
     protocol: TCP
     port: 9080
     targetPort: 9080
   - name: https
     protocol: TCP
     port: 9443
     targetPort: 9443
 selector:
   app: ibm-dba-extshare-prod
 type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
 name: ibacc-crs-ingress-svc
spec:
 ports:
   - name: http
     protocol: TCP
     port: 9080
     targetPort: 9080
   - name: https
     protocol: TCP
     port: 9443
     targetPort: 9443
 selector:
   app: ibm-dba-contentrestservice-dev
 type: ClusterIP
