CONTENT/platform/ingress_one.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dbamc-ingress
  annotations:
    # The NGINX ingress annotations contains a new prefix nginx.ingress.kubernetes.io.
    # To avoid breaking a running NGINX ingress controller, specify both new and old prefixes.
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.bluemix.net/sticky-cookie-services: "serviceName=ibacc-cpe-ingress-svc name=cpecookie expires=7300s path=/acce hash=sha1;serviceName=ibacc-ext-ingress-svc name=extcookie expires=7300s path=/contentapi hash=sha1;serviceName=ibacc-crs-ingress-svc name=crscookie expires=7300s path=/content-services-graphql hash=sha1"
spec:
  rules:
  - host: icp4a.content
    http:
      paths:
      - backend:
          serviceName: ibacc-cpe-ingress-svc
          servicePort: 9080
        path: /acce
      - backend:
          serviceName: ibacc-cpe-ingress-svc
          servicePort: 9080
        path: /P8CE
      - backend:
          serviceName: ibacc-cpe-ingress-svc
          servicePort: 9080
        path: /FileNet
      - backend:
          serviceName: ibacc-cpe-ingress-svc
          servicePort: 9080
        path: /wsi
      - backend:
          serviceName: ibacc-ext-ingress-svc
          servicePort: 9080
        path: /contentapi
      - backend:
          serviceName: ibacc-crs-ingress-svc
          servicePort: 9080
        path: /content-services-graphql
      - backend:
          serviceName: ibacc-crs-ingress-svc
          servicePort: 9080
        path: /content-services
  tls:
  - hosts:
    - icp4a.content
    secretName: icp4a
